// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-partial-view should delete a partial view 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-partial-view should handle non-existent partial view 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Partial view not found","status":404,"detail":"The partial view was not found.","operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
